# savon

./: Cargo.toml  README.md
savon-test/: Cargo.toml  build.rs
savon-test/src/: main.rs
src/: gen.rs  lib.rs  literal.rs  wsdl.rs
src/rpser/: mod.rs  xml.rs
