[package]
name = "savon-test"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
savon = { path = ".." }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
savon = { path = ".." }
